--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	width: 100%;
 	height: 100%;
+	background: #3f3f3f;
 }
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
