--- a/src/index.css
+++ b/src/index.css
@@ -7,44 +7,8 @@ body {
 	height: 100%;
 	background: #3f3f3f;
 }
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
-}
-.fire {
-	background-color: rgb(255, 125, 125);
-}
-.water {
-	background-color: rgb(125, 204, 255);
-}
-
-.wind {
-	background-color: rgb(176, 255, 170);
-}
-.life {
-	background-color: rgb(240, 255, 149);
-}
-.death {
-	background-color: rgb(180, 180, 180);
-}
-.neutral {
-	background-color: rgb(242, 198, 166);
-}
-.cardContainer {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-row-gap: 10px;
-	grid-template-rows: repeat(3, 1fr);
-	width: 80%;
-	margin: 20px auto;
-}
-.HeaderHome {
-	width: 100%;
-	height: 100px;
-	border: 1px solid black;
-}
-
-.page {
-	width: 100%;
-	height: 100%;
+.modal-content {
+	background: #FFFFFF 0% 0% no-repeat padding-box;
+	border-radius: 10px;
+	opacity: 0.95;
 }
